Added command history which can be navigated with up and down arrows

--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@ Want to see my projects type '<b>projects</b>'.
 <a href="https://github.com/AmazonPriime" target="_blank">Github</a>|<a href="https://www.linkedin.com/in/luke-holland-/" target="_blank">LinkedIn</a>
 
 Discord: <b>Amazon#0190</b>
-    </pre>
+
+Portfolio <a href="https://github.com/AmazonPriime/portfolio-terminal" target="_blank">source code</a>.</pre>
     <main id="main">
       <div class="terminal-line">
         $
