Added matrix theme to the website

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
+    <canvas id="matrix-canvas"></canvas>
     <pre>
    __       _                      _ _                 _
   / / _   _| | _____    /\  /\___ | | | __ _ _ __   __| |
@@ -25,13 +26,15 @@ Want to see my projects type '<b>projects</b>'.
 
 Discord: <b>Amazon#0190</b>
 
-Portfolio <a href="https://github.com/AmazonPriime/portfolio-terminal" target="_blank">source code</a>.</pre>
+Portfolio <a href="https://github.com/AmazonPriime/portfolio-terminal" target="_blank">source code</a>.
+</pre>
     <main id="main">
       <div class="terminal-line">
         $
         <span id="input" class="input" role="textbox" contenteditable autofocus></span>
       </div>
     </main>
+  <script src="matrix.js"></script>
   <script src="commands.js"></script>
 	<script src="index.js"></script>
   </body>
